# lyralabs-cleint-app

./: .cursorignore  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml
.github/workflows/: deploy.yml
apps/api/: Dockerfile  main.py  stripe_webhook.py
apps/api/admin/: auth.py  auth_routes.py  llm.py  routes.py
apps/api/oauth/: _state.py  ghl.py  google.py
apps/socket_listener/: __init__.py  main.py
apps/worker/: Dockerfile  arq_app.py  celery_app.py
apps/worker/tasks/: crystallize_skills.py  run_agent.py
docs/: demo-scenarios.md  google-oauth-verification.md  launch-runbook.md  roadmap-phase-2.md  slack-app-directory-checklist.md  vm-ops.md
infra/: docker-compose.yml  slack-app-manifest.yml
infra/cloud-run/: README.md  api.yaml  worker.yaml
infra/github-actions/: ci.yml  deploy.yml
infra/vm/: .env.example  README.md  deploy.sh  docker-compose.yml
scripts/: db_check.py  mint_admin_jwt.py  seed_dev_tenant.py  test_db_connection.py
tests/: conftest.py
tests/eval/: test_arlo_eval.py  test_arlo_ghl_live.py
tests/inference/: test_model_inference.py
tests/regression/: regression_test1.py  regression_test10.py  regression_test11.py  regression_test2.py  regression_test3.py  regression_test4.py  regression_test5.py  regression_test6.py  regression_test7.py  regression_test8.py  regression_test9.py
tests/unit/: test_admin_auth.py  test_admin_auth_routes.py  test_admin_llm.py  test_admin_routes.py  test_agent_graph.py  test_agent_memory.py  test_agent_state.py  test_api_main.py  test_arq_app.py  test_audit.py  test_celery_app.py  test_channels_schema.py  test_chart.py  test_config.py  test_credentials.py  test_crypto.py  test_db_models.py  test_ghl_calendars.py  test_ghl_client.py  test_ghl_contacts.py  test_ghl_conversations.py  test_ghl_pipelines.py  test_google_calendar.py  test_google_client.py  test_google_docs.py  test_google_drive.py  test_google_sheets.py  test_living_artifact.py  test_llm.py  test_llm_catalog.py  test_llm_router.py  test_logging.py  test_node_agent.py  test_node_agent_router.py  test_node_approval.py  test_node_artifact.py  test_node_classifier.py  test_node_critic.py  test_node_executor.py  test_node_planner.py  (+18 more)
